Added All RRs + Press + Changed Header

--- a/Committees.html
+++ b/Committees.html
@@ -66,7 +66,7 @@
                                     </div>
                                 </div>
                                 <div class="nav navbar-nav dropdown">
-                                    <li class="dropbtn"><a  href="Committees.html" onclick="Committee();">Committees</a></li>
+                                    <li class="dropbtn"><a  href="#" onclick="Committee();">Committees</a></li>
                                     <br><br>
                                     <div class="dropdown-content">
                                         <a href="Committees.html" onclick="GeneralAssembly();">General Assembly 1</a>
@@ -139,10 +139,10 @@
 					<h1>Topics</h1>
 					<br>
                     <p class="committeeText">
-                    1. Combating international financial crimes <br><br>
-					2. Economic Development in Central Asia<br><br>
-					3. Maintaining Sustainable Tourism industries in LEDCs<br><br>
-					4. Measures to regulate and stabilize cryptocurrencies<br><br>
+                    1. <a target="_blank" href="pdfs/GA2-Ivy Kang-T1.pdf">Combating international financial crimes </a> <br><br>
+					2. <a target="_blank" href="">Economic Development in Central Asia</a><br><br>
+					3. <a target="_blank" href="">Maintaining Sustainable Tourism industries in LEDCs</a><br><br>
+					4. <a target="_blank" href="pdfs/GA2-Ivy Kang-T4.pdf">Measures to regulate and stabilize cryptocurrencies</a><br><br>
 					</p>
                 </div>
                 <div class="mySlides10 w3-container">
@@ -167,10 +167,10 @@
 					<h1>Topics</h1>
 					<br>
                     <p class="committeeText">
-                    1. Measures to prevent the resurgence of dormant pathogens as a result of climate change<br><br>
-					2. Measures to reduce industrial impact on marine biodiversity<br><br>
-					3. Measures to mitigate the damage of climate change disasters<br><br>
-					4. The Role of Multinational Corporations on Sustainable Development<br><br>
+                    1. <a target="_blank" href=" ">Measures to prevent the resurgence of dormant pathogens as a result of climate change</a><br><br>
+					2. <a target="_blank" href="">Measures to reduce industrial impact on marine biodiversity</a><br><br>
+					3. <a target="_blank" href="">Measures to mitigate the damage of climate change disasters</a><br><br>
+					4. <a target="_blank" href="">The Role of Multinational Corporations on Sustainable Development</a><br><br>
 					</p>
                 </div>
                 <div class="mySlides3 w3-container">
@@ -195,10 +195,10 @@
 					<h1>Topics</h1>
 					<br>
                     <p class="committeeText">
-                    1. Measures to prevent exploitation of developing markets by MNCs in West Africa<br><br>
-					2. Measures to overcome growing poverty and social inequality in Turkey<br><br>
-					3. Combatting global food insecurity <br><br>
-					4. Measures to reduce youth unemployment in the Eurozone<br><br>
+                    1. <a target="_blank" href=" ">Measures to prevent exploitation of developing markets by MNCs in West Africa</a><br><br>
+					2. <a target="_blank" href="pdfs/ECOSOC-Yi Xin Lee-T2.pdf">Measures to overcome growing poverty and social inequality in Turkey</a><br><br>
+					3. <a target="_blank" href="">Combatting global food insecurity </a><br><br>
+					4. <a target="_blank" href="pdfs/ECOSOC-Yi Xin Lee-T4.pdf">Measures to reduce youth unemployment in the Eurozone</a><br><br>
 					</p>
                 </div>
                 <div class="mySlides4 w3-container">
@@ -223,10 +223,10 @@
 					<h1>Topics</h1>
 					<br>
                     <p class="committeeText">
-                    1. Measures to protect the rights of persecuted peoples within Myanmar<br><br>
-					2. Protecting the rights of people affected by terrorism in the Horn of Africa<br><br>
-					3. Measures to address the humanitarian issue in the Philippines as a result of the Drug War  <br><br>
-					4. Combatting child trafficking in Southeast Asia<br><br>
+                    1. <a target="_blank" href="pdfs/HRC-Karl Stuecker-T1.pdf">Measures to protect the rights of persecuted peoples within Myanmar</a><br><br>
+					2. <a target="_blank" href="pdfs/HRC_Kelsey_Fu_T2.pdf">Protecting the rights of people affected by terrorism in the Horn of Africa</a><br><br>
+					3. <a target="_blank" href=" ">Measures to address the humanitarian issue in the Philippines as a result of the Drug War  </a><br><br>
+					4. <a target="_blank" href="pdfs/HRC_Kelsey Fu_T4.pdf">Combatting child trafficking in Southeast Asia</a><br><br>
 					</p>
                 </div>
                 <div class="mySlides5 w3-container">
@@ -251,10 +251,10 @@
 					<h1>Topics</h1>
 					<br>
                     <p class="committeeText">
-                    1. The Situation in Kurdistan <br><br>
-					2. Measures to address the Kashmir Conflict <br><br>
-					3. Questions on Israel-Palestine Border <br><br>
-					4. Measures to resolve territorial disputes in the East China Sea<br><br>
+                    1. <a target="_blank" href=" ">The Situation in Kurdistan</a> <br><br>
+					2. <a target="_blank" href="">Measures to address the Kashmir Conflict</a> <br><br>
+					3. <a target="_blank" href="">Questions on Israel-Palestine Border</a> <br><br>
+					4. <a target="_blank" href="">Measures to resolve territorial disputes in the East China Sea</a><br><br>
 					</p>
                 </div>
                 <div class="mySlides6 w3-container">
@@ -279,10 +279,10 @@
 					<h1>Topics</h1>
 					<br>
                     <p class="committeeText">
-                    1. Question of non-proliferation of nuclear weapons  <br><br>
-					2. Combatting the illicit trade in Small Arms and Light Weapons<br><br>
-					3. Preventing the militarization of the Arctic Circle<br><br>
-					4. Combatting proliferation of chemical and biological weapons with emphasis on the risk of acquisition by the non-   state actors<br><br>
+                    1. <a target="_blank" href="pdfs/DIS-Shawn Teh-T1.pdf">Question of non-proliferation of nuclear weapons  </a><br><br>
+					2. <a target="_blank" href="pdfs/DIS-Shawn Teh-T2.pdf">Combatting the illicit trade in Small Arms and Light Weapons</a><br><br>
+					3. <a target="_blank" href="">Preventing the militarization of the Arctic Circle</a><br><br>
+					4. <a target="_blank" href="">Combatting proliferation of chemical and biological weapons with emphasis on the risk of acquisition by the non-   state actors</a> <br><br>
 					</p>
                 </div>
                 <div class="mySlides7 w3-container">
@@ -309,7 +309,7 @@
                     <p class="committeeText">
                     1. <a target="_blank" href="pdfs/AP-MichelleJunHa-T1-FINAL.pdf">Measures to resolve territorial disputes in the South China Sea </a> <br><br>
 					2. <a target="_blank" href="">Addressing the humanitarian issue in the Democratic People's Republic of Korea </a> <br><br>
-					3. <a target="_blank" href="">Combatting the potential threat of an arms race in Asia</a><br><br>
+					3. <a target="_blank" href=" ">Combatting the potential threat of an arms race in Asia</a><br><br>
 					</p>
                 </div>
                 <div class="mySlides8 w3-container">
@@ -335,7 +335,7 @@
 					<h1>Topics</h1>
 					<br>
                     <p class="committeeText">
-						1. <a target="_blank" href="">The Situation in the Korean peninsula</a><br><br>
+						1. <a target="_blank" href=" ">The Situation in the Korean peninsula</a><br><br>
 						2. <a target="_blank" href="pdfs/SC-Haerin Kim-T2-FINAL.pdf">Question of Non-State Actors as a Danger to International Peace and Security</a> <br><br>
 						3.  <a target="_blank" href="pdfs/SC-Jonathan Ng-T3-FINAL.pdf">The Situation in Catalonia</a> <br><br>
 					</p>
