--- a/Conference.html
+++ b/Conference.html
@@ -68,7 +68,7 @@
                                     </div>
                                 </div>
                                 <div class="nav navbar-nav dropdown">
-                                    <li class="dropbtn"><a  href="Committees.html" onclick="Committee();">Committees</a></li>
+                                    <li class="dropbtn"><a  href="#" onclick="Committee();">Committees</a></li>
                                     <br><br>
                                     <div class="dropdown-content">
                                         <a href="Committees.html" onclick="GeneralAssembly();">General Assembly 1</a>
@@ -169,7 +169,7 @@
                                                             <div class="col-md-4 col-sm-6 item ">
                                                               <center>
                                                                <h1 class="nino-serviceTitle">Head Of Press</h1>
-                                                                <img class="demo imgbtn" onclick="currentDiv(8)" src="images/Empty%20Frame.jpg" height=165px width=165px>
+                                                                <img class="demo imgbtn" onclick="currentDiv(8)" src="images/DIMUN Press Team Photos/Matthew Cropped.png" height=165px width=165px>
 																</center>
                                                             </div>
                                                             
@@ -339,7 +339,7 @@ Alongside my deputy, Jeffrey Liang, and the rest of the Admin Team, I will do ev
                                                                         <li>
                                                                             <div layout="row" class="verticalCenter">
                                                                                 <div class="nino-avatar fsr">
-                                                                                    <img class="img-circle img-thumbnail" src="images/Empty%20Frame.jpg" alt="">
+                                                                                    <img class="img-circle img-thumbnail" src="images/DIMUN Press Team Photos/Matthew Cropped.png" alt="">
                                                                                 </div>
                                                                                 <div>
                                                                                     <p class="quote"><br><br>Honorable Directors, distinguished delegates, esteemed chairs, and welcomed guests
