--- a/Directors.html
+++ b/Directors.html
@@ -66,7 +66,7 @@
                                     </div>
                                 </div>
                                 <div class="nav navbar-nav dropdown">
-                                    <li class="dropbtn"><a  href="Committees.html" onclick="Committee();">Committees</a></li>
+                                    <li class="dropbtn"><a  href="#" onclick="Committee();">Committees</a></li>
                                     <br><br>
                                     <div class="dropdown-content">
                                         <a href="Committees.html" onclick="GeneralAssembly();">General Assembly 1</a>
@@ -103,7 +103,7 @@
 		<table class="minimalistBlack2">
 		<tbody>
 		<tr>
-		<td align="center"><a>Monthly Directors' Pamphlet</a></td>
+		<td align="center"><a target="_blank" href="pdfs/Directors Pamphlet December.pdf">Monthly Directors' Pamphlet</a></td>
 		<td align="center">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a target="_blank" href="pdfs/DIMUNDirectors guide.pdf">Directors' Guide</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</td>
 		</tr>
 		</tbody>
