--- a/Schedule.html
+++ b/Schedule.html
@@ -67,7 +67,7 @@
                                     </div>
                                 </div>
                                 <div class="nav navbar-nav dropdown">
-                                    <li class="dropbtn"><a  href="Committees.html" onclick="Committee();">Committees</a></li>
+                                    <li class="dropbtn"><a  href="#" onclick="Committee();">Committees</a></li>
                                     <br><br>
                                     <div class="dropdown-content">
                                         <a href="Committees.html" onclick="GeneralAssembly();">General Assembly 1</a>
