--- a/Committees.html
+++ b/Committees.html
@@ -445,7 +445,7 @@
 					<h1>Topics</h1>
 					<br>
                     <p class="committeeText">
-						1. <a target="_blank" href=" ">The Situation in the Korean peninsula</a><br><br>
+						1. <a target="_blank" href="pdfs/SC-Eric Choi-T1-FINAL.pdf">The Situation in the Korean peninsula</a><br><br>
 						2. <a target="_blank" href="pdfs/SC-Haerin Kim-T2-FINAL.pdf">Question of Non-State Actors as a Danger to International Peace and Security</a> <br><br>
 						3.  <a target="_blank" href="pdfs/SC-Jonathan Ng-T3-FINAL.pdf">The Situation in Catalonia</a> <br><br>
 					</p>
