--- a/Schedule.html
+++ b/Schedule.html
@@ -1,6 +1,5 @@
 ﻿<!DOCTYPE html>
 <html>
-<html lang="en">
 <head>
 	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -577,16 +576,23 @@
     <div class="mySlides w3-container">
     	<br><br><br>
     	<center>
-			<button>DIMUN VIII Welcome Reception</button>
-			<button>DIMUN VIII Welcome Buffet</button>
-			<button>DIMUM VIII Oriental Buffet</button>
-			<button>DIMUN VIII Pizza Night</button>	
-			<button>DIMUN VIII Farewell Lunch</button>
+			<img src="pdfs/Monring/Welcome.png" width="20%" style="border: 2px solid black;" onClick="WelcomeReception();">
+			<img src="pdfs/Monring/Welcome Buffet.png" width="20%" style="border: 2px solid black;" onClick="WelcomeBuffet();">
+			<img src="pdfs/Monring/Pizza Night.png" width="20%" style="border: 2px solid black;" onClick="PizzaNight();">
+			<img src="pdfs/Monring/Farewell Lunch.png" width="20%" style="border: 2px solid black;" onClick="FarewellLunch();">
 		</center>
 	</div>
 </div>
     
-    
+	<div id="myModal" class="modal">
+	  <!-- Modal content -->
+	  <div class="modal-content">
+		<span class="close">&times;</span>
+		<img src=""id="menu">
+	  </div>
+		
+	</div>
+
     <script type="text/javascript" src="js/jquery.min.js"></script>	
 	<script type="text/javascript" src="js/isotope.pkgd.min.js"></script>
 	<script type="text/javascript" src="js/jquery.prettyPhoto.js"></script>
@@ -597,6 +603,7 @@
 	<script type="text/javascript" src="js/unslider-min.js"></script>
 	<script type="text/javascript" src="js/template.js"></script>
 <script>
+	
     scroll();
     function scroll() 
     {
@@ -607,7 +614,95 @@
     {
     window.scrollTo(0, 0)
     }
+	
+	
+	
+	function WelcomeReception()
+	{
+		document.getElementById("menu").src="pdfs/Monring/Welcome.png"
+		openModal();
+	}
+	function WelcomeBuffet()
+	{
+		document.getElementById("menu").src="pdfs/Monring/Welcome Buffet.png"
+		openModal();
+	}
+	function PizzaNight()
+	{
+		document.getElementById("menu").src="pdfs/Monring/Pizza Night.png"
+		openModal();
+	}
+	function FarewellLunch()
+	{
+		document.getElementById("menu").src="pdfs/Monring/Farewell Lunch.png" 
+		openModal();
+	}
+	
+	
+	
+	// Get the modal
+	var modal = document.getElementById('myModal');
 
+	// Get the <span> element that closes the modal
+	var span = document.getElementsByClassName("close")[0];
+
+	// When the user clicks on the button, open the modal 
+	function openModal() {
+		modal.style.display = "block";
+	}
+
+	// When the user clicks on <span> (x), close the modal
+	span.onclick = function() {
+		modal.style.display = "none";
+	}
+
+	// When the user clicks anywhere outside of the modal, close it
+	window.onclick = function(event) {
+		if (event.target == modal) {
+			modal.style.display = "none";
+		}
+	}
+	
 </script>
+
+<style>
+	.modal {
+		display: none; /* Hidden by default */
+		position: fixed; /* Stay in place */
+		z-index: 1; /* Sit on top */
+		left: 0;
+		top: 0;
+		width: 100%; /* Full width */
+		height: 100%; /* Full height */
+		overflow: auto; /* Enable scroll if needed */
+		background-color: rgb(0,0,0); /* Fallback color */
+		background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+	}
+
+	/* Modal Content/Box */
+	.modal-content {
+		background-color: #fefefe;
+		margin: 15% auto; /* 15% from the top and centered */
+		padding: 20px;
+		border: 1px solid #888;
+		width: 80%; /* Could be more or less, depending on screen size */
+	}
+
+	/* The Close Button */
+	.close {
+		color: #aaa;
+		float: right;
+		font-size: 28px;
+		font-weight: bold;
+	}
+
+	.close:hover,
+	.close:focus {
+		color: black;
+		text-decoration: none;
+		cursor: pointer;
+	}	
+</style>
+
 </body>
 </html>
