--- a/Schedule.html
+++ b/Schedule.html
@@ -576,10 +576,11 @@
     <div class="mySlides w3-container">
     	<br><br><br>
     	<center>
-			<img src="pdfs/Monring/Welcome.png" width="20%" style="border: 2px solid black;" onClick="WelcomeReception();">
-			<img src="pdfs/Monring/Welcome Buffet.png" width="20%" style="border: 2px solid black;" onClick="WelcomeBuffet();">
-			<img src="pdfs/Monring/Pizza Night.png" width="20%" style="border: 2px solid black;" onClick="PizzaNight();">
-			<img src="pdfs/Monring/Farewell Lunch.png" width="20%" style="border: 2px solid black;" onClick="FarewellLunch();">
+			<img src="pdfs/Monring/DIMUN VIII Welcome Reception .png" width="18%" style="border: 2px solid black;" onClick="WelcomeReception();">
+			<img src="pdfs/Monring/DIMUN VIII Welcome Buffet .png" width="18%" style="border: 2px solid black;" onClick="WelcomeBuffet();">
+			<img src="pdfs/Monring/DIMUN VIII Oriental Lunch Buffet .png" width="18%" style="border: 2px solid black;" onClick="OrientalLunch();">
+			<img src="pdfs/Monring/DIMUN VIII Pizza Night.png" width="18%" style="border: 2px solid black;" onClick="PizzaNight();">
+			<img src="pdfs/Monring/DIMUN VIII Farewell Lunch.png" width="18%" style="border: 2px solid black;" onClick="FarewellLunch();">
 		</center>
 	</div>
 </div>
@@ -619,22 +620,27 @@
 	
 	function WelcomeReception()
 	{
-		document.getElementById("menu").src="pdfs/Monring/Welcome.png"
+		document.getElementById("menu").src="pdfs/Monring/DIMUN VIII Welcome Reception .png"
 		openModal();
 	}
 	function WelcomeBuffet()
 	{
-		document.getElementById("menu").src="pdfs/Monring/Welcome Buffet.png"
+		document.getElementById("menu").src="pdfs/Monring/DIMUN VIII Welcome Buffet .png"
 		openModal();
 	}
 	function PizzaNight()
 	{
-		document.getElementById("menu").src="pdfs/Monring/Pizza Night.png"
+		document.getElementById("menu").src="pdfs/Monring/DIMUN VIII Pizza Night.png"
 		openModal();
 	}
 	function FarewellLunch()
 	{
-		document.getElementById("menu").src="pdfs/Monring/Farewell Lunch.png" 
+		document.getElementById("menu").src="pdfs/Monring/DIMUN VIII Farewell Lunch.png" 
+		openModal();
+	}
+	function OrientalLunch()
+	{
+		document.getElementById("menu").src="pdfs/Monring/DIMUN VIII Oriental Lunch Buffet .png" 
 		openModal();
 	}
 	
