New RRs + Deletegates Page

--- a/Committees.html
+++ b/Committees.html
@@ -581,11 +581,39 @@
 					<h1>Topics</h1>
 					<br>
                     <p class="committeeText">
-                    1. <a target="_blank" href=" ">The Situation in Kurdistan</a> <br><br>
-					2. <a target="_blank" href="">Measures to address the Kashmir Conflict</a> <br><br>
-					3. <a target="_blank" href="">Questions on Israel-Palestine Border</a> <br><br>
-					4. <a target="_blank" href="">Measures to resolve territorial disputes in the East China Sea</a><br><br>
+                    1. <a target="_blank" href="pdfs/DIMUN_SPC_RR/SPC-YichuHuang-T1 FINAL.pdf">The Situation in Kurdistan</a> 
+					</p>     
+                    <br>
+                    <p class="committeeTextIndent">
+                    	The Kurds, united by language and culture, inhibit in regions mainly in southeastern Turkey, and north-eastern Syria as well as part of Iraq. However, they do not have a state of their own. However, many Kurds expressed the need and want of establishing a state of their own. This is often referred to as Kurdistan. Yet, this idea faced many difficulties in the long run. Following the end of World War One, in the Treaty of Sevres in 1920, the western allies provisioned a Kurdistan state and gave hope to many Kurds who have always wanted their own homeland. However, in the Treaty of Lausanne, the modern border of Turkey was set and left no room for an individual, self-governed state for the Kurds. In the later years, despite many calls for an established Kurd state, all of them has been quashed. Mainly, the idea of an independent Kurdistan was opposed by nations such as Iraq, Iran, and Turkey. 
+                    </p>
+                    <br>
+                    <p class="committeeText">
+					2. <a target="_blank" href="pdfs/DIMUN_SPC_RR/SPC-Chae Won Park-T2 FINAL.pdf">Measures to address the Kashmir Conflict</a> 
 					</p>
+					<br>
+					<p class="committeeTextIndent">
+						Kashmir has been the center of conflict between India and Pakistan ever since the two nations earned their independence in 1947. Britain’s 1947 Indian Independence Act had removed British presence from the Indian subcontinent and partitioned it into a Hindu India and a Muslim Pakistan. The region Kashmir was free to join either nation. In late 1947, Kashmir chose to unite with India, which gave rise to a 70-year period of small conflicts and skirmishes between India and Pakistan.  
+						Three nations – India, Pakistan, and China – all claim to have control over the Kashmir region. India’s allegation to govern 45% of Kashmir, also known as the state of Jammu and Kashmir, is opposed by Pakistan, arguing that 35% of Jammu and Kashmir is governed by them. China declares to be in charge of the remaining 20%.
+
+					</p>
+					<br>
+					<p class="committeeText">
+					3. <a target="_blank" href="pdfs/DIMUN_SPC_RR/SPC-YichuHuang-T3 FINAL.pdf">Questions on Israel-Palestine Border</a> 
+					</p>
+					<br>
+					<p class="committeeTextIndent">
+						The Israeli Palestine conflict arose many centuries ago and has quite a complicated nature. It is mainly concerned with the idea of Zionism, which is a movement for re-establishing a Jewish nation. Specifically speaking, the Jews wanted a self-governed state within Palestine. The idea of Zionism rose many centuries ago, reaching its peak in the 20th during post Second World War era. This eventually forced the United Nation to intervene the issue, who recommended giving more than half of Palestine land to establishing a Jewish land despite the fact that the Jews only counts for an extremely low portion of the entire Palestinian population. 
+					</p>
+					<br>
+					<p class="committeeText">
+					4. <a target="_blank" href="pdfs/DIMUN_SPC_RR/SPC-Chae Won Park-T4 FINAL.pdf">Measures to resolve territorial disputes in the East China Sea</a><br><br>
+					</p>
+              		<br>
+               		<p class="committeeTextIndent">
+						Located in the East China Sea, the Senkaku Islands are home to abundant oil and natural gas reserves. Not only do the islands provide rich fishing grounds, they also possess a strategically significant location in the Pacific Sea. Historically, the Senkaku Islands served as maritime navigational markers and were never liable to any nation’s control. In 1895, the Senkaku Islands were claimed by Japan and have been in their control ever since. However, titling these islands as the Diaoyu Islands, China have begun to reassert claims over the region. By citing historic rights to the area, China contends to have had control over the Diaoyu Islands since the 1400s. China’s sudden change of stance initiated the 50-year dispute over these islands between China and Japan; both nations strive to get hold of the economically and strategically valuable lands. 
+					</p>
+               	    <br>
                 </div>
                 <div class="mySlides6 w3-container">
                     <h1>Resolutions</h1>
