--- a/Directors.html
+++ b/Directors.html
@@ -96,14 +96,14 @@
 	</header>
     <center>
     <br><br><br>
-    <h1 class=:DirectorsText><strong>Welcome MUN directors:</strong></h1>
+    <h1 class=DirectorsText><strong>Welcome MUN directors:</strong></h1>
     <h4 align = "justify" class="DirectorsText">
 		
 		<br><br>
 		<table class="minimalistBlack2">
 		<tbody>
 		<tr>
-		<td align="center"><a target="_blank" href="pdfs/Directors Pamphlet December.pdf">Monthly Directors' Pamphlet</a></td>
+		<td align="center"><a target="_blank" href="pdfs/Directors' Pamphlet [January].pdf">Monthly Directors' Pamphlet</a></td>
 		<td align="center">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a target="_blank" href="pdfs/DIMUNDirectors guide.pdf">Directors' Guide</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</td>
 		</tr>
 		</tbody>
