some CSS updates

--- a/Directors.html
+++ b/Directors.html
@@ -96,7 +96,7 @@
 	</header>
     <center>
     <br><br><br>
-    <h1 class=DirectorsText><strong>Welcome MUN directors:</strong></h1>
+    <h1 class=DirectorsTextTitle><strong>Welcome MUN directors:</strong></h1>
     <h4 align = "justify" class="DirectorsText">
 		
 		<br><br>
