Tweaks + new RR + new Officers

--- a/Conference.html
+++ b/Conference.html
@@ -433,7 +433,7 @@ Again, it is a huge honor to serve as this role, and I look forward to seeing yo
 				Evan Lu <br>
 				<br>
 				<span class="listOfOfficersTitle">General Assembly Second Committee [GA 2]</span><br>
-				JuWon Ha <br>
+				Daniel Cai <br>
 				Ivy Kang<br>
 				<br>
 				<span class="listOfOfficersTitle">Economic and Social Council [ECOSOC]</span><br>
@@ -442,7 +442,7 @@ Again, it is a huge honor to serve as this role, and I look forward to seeing yo
 				<br>
 
 				<span class="listOfOfficersTitle">Environment Commission [ENV]</span><br>
-				Erik Chen<br>
+				May Lee<br>
 				Ah Song Cho <br>
 				<br>
 				<span class="listOfOfficersTitle">Human Rights Council [HRC]</span><br>
@@ -451,7 +451,7 @@ Again, it is a huge honor to serve as this role, and I look forward to seeing yo
 				<br>
 				<span class="listOfOfficersTitle">Special Conference on Southeast and Central Asia [SPC]</span><br>
 				Yichu Huang <br>
-				Chaewon.Park <br>
+				Chaewon Park <br>
 				<br>
 
 				<span class="listOfOfficersTitle">Disarmament Council [DIS]</span><br>
@@ -464,7 +464,7 @@ Again, it is a huge honor to serve as this role, and I look forward to seeing yo
 				Jonathan Ng <br>
 				<br>
 				<span class="listOfOfficersTitle">Advisory Panel [AP]</span><br>
-				Junha Youn <br>
+				Julie Zhang <br>
 				Michelle Zhang<br>
        </p>
         </div>
