--- a/Committees.html
+++ b/Committees.html
@@ -1,6 +1,15 @@
 ﻿<!DOCTYPE html>
 <html lang="en">
 <head>
+	<script src="http://js.nicedit.com/nicEdit-latest.js" type="text/javascript"></script>
+	<script type="text/javascript">bkLib.onDomLoaded(nicEditors.allTextAreas);</script>
+	<script type="text/javascript" src="https://cdn.emailjs.com/dist/email.min.js"></script>
+	<script type="text/javascript">
+	   (function(){
+		  emailjs.init("user_YpIsmHJ5xFOxxb4YNwCcM");
+	   })();
+	</script>
+	
 	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta name="description" content="">
@@ -22,6 +31,19 @@
 	<link rel="stylesheet" type="text/css" href="css/template.css" />
 	
 </head>
+
+<script>
+	function send()
+	{
+		var nicE = new nicEditors.findEditor('TextStuffGA');
+			var CommentText = nicE.getContent();
+			
+            emailjs.send("default_service","amendments",{country:document.getElementById("CountryGA").value, FromEmail:document.getElementById("EmailGA").value, information:CommentText, SAC:document.getElementById("SACGA").value});
+            document.getElementById("CountryGA").value=""
+            document.getElementById("EmailGA").value=""
+            alert("Form Submitted!")
+	}
+</script>
 <body data-target="#nino-navbar;" data-spy="scroll">
 
 	<!-- Header
@@ -103,6 +125,7 @@
             <div class="w3-left w3-bar committeeItem">
                 <button class="demo2 w3-button committeeBar w3-bar-item" onclick=currentDiv2(1)>Topics</button>
                 <button class="demo2 w3-button committeeBar w3-bar-item" onclick=currentDiv2(2)>Resolutions</button>
+                <button class="demo2 w3-button committeeBar w3-bar-item" onclick=currentDiv2(3)>Amendments</button>
             </div>
             <div class="w3-content" style="max-width: 100%">
                 <div class="mySlides2 w3-container">
@@ -169,10 +192,31 @@
 					</p><br>
                 </div>
                 <div class="mySlides2 w3-container">
+                   <br>
                     <h1>Resolutions</h1>
                     <div id=drive1>
                     <iframe src="https://drive.google.com/embeddedfolderview?id=0BwhNWu5jAmSsUTF4dExKQTVXYnc#list" width="100%" height="600px" frameborder="0"></iframe>
                     </div>
+                </div>
+                <div class="mySlides2 w3-container">
+                    <br>
+                    <center>
+						<h1>Amendments</h1>
+						<br>
+						
+						<input type="text" id="CountryGA" placeholder="Country:">
+						<input type="text" id="EmailGA" placeholder="Enter Your Email:">
+						<br>
+						<select id="SACGA">
+						  <option value="Strike">Strike</option>
+						  <option value="Change">Change</option>
+						  <option value="Add">Add</option>
+						</select>
+            		    <textarea style="width:600%;height:200%;" id="TextStuffGA"></textarea>
+             		    <br>
+             		    <button onclick="send();" class="submit">Submit</button>
+              		    <br><br><br>
+               		</center>
                 </div>
             </div>
         </div>
