--- a/Conference.html
+++ b/Conference.html
@@ -73,7 +73,7 @@
                                     <div class="dropdown-content">
                                         <a href="Committees.html" onclick="GeneralAssembly();">General Assembly 1</a>
                                         <a href="Committees.html" onclick="GeneralAssembly2();">General Assembly 2</a>
-                                        <a href="Committees.html" onclick="EnviromentalCommision();">Enviroment Commission</a>
+                                        <a href="Committees.html" onclick="EnvironmentalCommision();">Environment Commission</a>
                                         <a href="Committees.html" onclick="Economic();">Economic and Social Council</a>
                                         <a href="Committees.html" onclick="HumanRights();">Human Rights Council</a>
                                         <a href="Committees.html" onclick="Special();">Special Conference</a>
