--- a/Directors.html
+++ b/Directors.html
@@ -22,6 +22,7 @@
 	<link rel="stylesheet" type="text/css" href="css/template.css" />
 	
 </head>
+
 <body data-target="#nino-navbar;" data-spy="scroll">
 
 	<!-- Header
@@ -94,20 +95,38 @@
 		</div>
 
 	</header>
+   
+   	<script>
+		function MonthlyDirector()
+		{
+			window.open("pdfs/Directors' Pamphlet [January].pdf")
+		}
+		function FinalPamphlet()
+		{
+			window.open("pdfs/Director's Pamphlet FINAL.pdf")
+		}
+		function DirectorsGuide()
+		{
+			window.open("pdfs/DIMUNDirectors guide.pdf")
+		}
+	</script>
+   
     <center>
     <br><br><br>
-    <h1 class=DirectorsTextTitle><strong>Welcome MUN directors:</strong></h1>
+    <h1 class="DirectorsTextTitle"><strong>Welcome MUN directors:</strong></h1>
+    <hr class="hrtitle">
+    <br>
+    	<center>
+    		
+			<img src="pdfs/Directors Pamphlet [January].jpg" width="10%" style="border: 2px solid black;" onClick="MonthlyDirector();" class="imgbtn">
+			
+			
+			<img src="pdfs/Directors Pamphlet FINAL.jpg" width="10%" hspace="5%" style="border: 2px solid black;" onClick="FinalPamphlet();" class="imgbtn">
+			<img src="pdfs/DIMUNDirectors guide.jpg" width="10%" style="border: 2px solid black;" onClick="DirectorsGuide();" class="imgbtn">
+		</center>
+   
     <h4 align = "justify" class="DirectorsText">
 		
-		<br><br>
-		<table class="minimalistBlack2">
-		<tbody>
-		<tr>
-		<td align="center"><a target="_blank" href="pdfs/Directors' Pamphlet [January].pdf">Monthly Directors' Pamphlet</a></td>
-		<td align="center">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a target="_blank" href="pdfs/DIMUNDirectors guide.pdf">Directors' Guide</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</td>
-		</tr>
-		</tbody>
-		</table>
 		<br><br>
 		Model United Nations is a forum for students to research and consider world issues before convening to represent the concerns of individual countries in UN-style debate. At the conference, their task will be to find globally acceptable solutions to real-world problems. It is an invaluable opportunity for students to familiarise themselves with current national and global issues as well as to improve their research and public speaking skills.
  		<br><br>
