--- a/Conference.html
+++ b/Conference.html
@@ -140,7 +140,7 @@
                                                             <div class="col-md-4 col-sm-6 item ">
                                                             <center>
 															<h1 class="nino-serviceTitle">Deputy Secretary-General</h1>
-                                                                <img class="demo imgbtn" onclick="currentDiv(5)" src="images/ConferencePg/jenny.jpg" height=165px width=165px>
+                                                                <img class="demo imgbtn" onclick="currentDiv(5)" src="images/ConferencePg/Jen.jpg" height=165px width=165px>
 																</center>
 															</div>
                                                            
@@ -169,7 +169,7 @@
                                                             <div class="col-md-4 col-sm-6 item ">
                                                               <center>
                                                                <h1 class="nino-serviceTitle">Head Of Press</h1>
-                                                                <img class="demo imgbtn" onclick="currentDiv(8)" src="images/DIMUN Press Team Photos/Matthew Cropped.png" height=165px width=165px>
+                                                                <img class="demo imgbtn" onclick="currentDiv(8)" src="images/ConferencePg/Matt.JPG" height=165px width=165px>
 																</center>
                                                             </div>
                                                             
@@ -268,7 +268,7 @@ Welcome to DIMUN VIII.
                                                                         <li>
                                                                             <div layout="row" class="verticalCenter">
                                                                                 <div class="nino-avatar fsr">
-                                                                                    <img class="img-circle img-thumbnail" src="images/ConferencePg/jenny.jpg" alt="">
+                                                                                    <img class="img-circle img-thumbnail" src="images/ConferencePg/Jen.jpg" alt="">
                                                                                 </div>
                                                                                 <div>
                                                                                     <p class="quote"><br><br>Esteemed directors, student officers, delegates, and guests, <br><br>
@@ -339,7 +339,7 @@ Alongside my deputy, Jeffrey Liang, and the rest of the Admin Team, I will do ev
                                                                         <li>
                                                                             <div layout="row" class="verticalCenter">
                                                                                 <div class="nino-avatar fsr">
-                                                                                    <img class="img-circle img-thumbnail" src="images/DIMUN Press Team Photos/Matthew Cropped.png" alt="">
+                                                                                    <img class="img-circle img-thumbnail" src="images/ConferencePg/Matt.JPG" alt="">
                                                                                 </div>
                                                                                 <div>
                                                                                     <p class="quote"><br><br>Honorable Directors, distinguished delegates, esteemed chairs, and welcomed guests
