Removed Monthly Director

--- a/Directors.html
+++ b/Directors.html
@@ -117,12 +117,8 @@
     <hr class="hrtitle">
     <br><br>
     	<center>
-    		
-			<img src="pdfs/Directors Pamphlet [January].jpg" width="10%" style="border: 2px solid black;" onClick="MonthlyDirector();" class="imgbtn">
-			
-			
 			<img src="pdfs/Directors Pamphlet FINAL.jpg" width="10%" hspace="5%" style="border: 2px solid black;" onClick="FinalPamphlet();" class="imgbtn">
-			<img src="pdfs/DIMUNDirectors guide.jpg" width="10%" style="border: 2px solid black;" onClick="DirectorsGuide();" class="imgbtn">
+			<img src="pdfs/DIMUNDirectors guide.jpg" width="10%" hspace="5%" style="border: 2px solid black;" onClick="DirectorsGuide();" class="imgbtn">
 		</center>
    
     <h4 align = "justify" class="DirectorsText">
